# vtts

./: .gitignore  .prettierignore  Cargo.toml  README.md
.github/workflows/: users-build-and-deploy.yaml  users-database-build-and-deploy.yaml
docs/: README.md  architecture.structurizr
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/adapters/: env_logger.rs
shared/src/ports/: logger.rs
users/: .env.defaults  .env.example  Cargo.toml  Dockerfile  package-lock.json  package.json  secrets.sh
users-database/: .gitignore  Dockerfile  README.md  secrets.sh
users-database/helm/: Chart.yaml  values.yaml
users-database/helm/templates/: deployment.yaml  nodeport-svc.yaml  pvc.yaml  secrets.yaml
users/helm/: Chart.yaml  values.yaml
users/helm/templates/: autoscaler.yaml  deployment.yaml  service.yaml
users/migrations/2023-07-27-194937_users/: up.sql
users/src/: main.rs  main.ts  schema.rs
users/src/adapters/: app.nestjs.module.ts  console.logger.ts  gql_schema.rs  mongoose.users.repository.ts  users_repository_psql.rs
users/src/adapters/graphql/: users.graphql.ts  users.resolver.ts  users.thumbnails.graphql.ts
users/src/entities/: emails.ts  identity.ts  ids.ts  systems.ts  user.rs  user.thumbnail.ts  usernames.ts  users.thumbnails.ts  users.ts
users/src/interactors/: users.interactor.ts  users_interactor.rs  users_interactors.rs
users/src/ports/: logger.ts  users.repository.ts  users_repository.rs
users_database/: Dockerfile
