[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
lazy_static = "1.4"
log = "0.4"
regex = "1.9.1"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.4.0", features = ["serde", "v4"] }
