[package]
name = "users"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
diesel = { version = "2.1.0", features  = ["postgres", "uuid", "chrono", "r2d2"] }
dotenvy = "0.15"
lazy_static = "1.4.0"
regex = "1.9.1"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.4.0", features = ["serde", "v4"] }
serial_test = "0.5.0"
chrono = { version = "0.4", features = ["serde"] }
juniper = "0.15.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde_json = "1.0.104"
juniper_warp = "0.7.0"
